--- a/banknote-app/res/layout/activity_main.xml
+++ b/banknote-app/res/layout/activity_main.xml
@@ -19,4 +19,17 @@
         android:layout_height="wrap_content"
         android:text="@string/button_send" 
         android:onClick="sendMessage"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/take_photo"
+        android:onClick="takePhoto" />
+
+    <ImageView
+        android:id="@+id/photo_viewer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_launcher" />
+
 </LinearLayout>
